# Yeolo-AI

./: $.env  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.agents/: AGENTS.md  config.json  log.md  system.md
.agents/agents/: coder.md  planner.md  reviewer.md  tester.md  updater.md
.agents/hooks/: init.sh  run_test.sh  test.sh
.agents/skills/code-review-formatter/: SKILL.md
.agents/skills/git-commit-formatter/: SKILL.md
.agents/skills/module-explain-formatter/: SKILL.md
.agents/skills/pr-generator/: SKILL.md
.agents/skills/progress-manager/: SKILL.md
.agents/skills/pytest-mocking/: SKILL.md
.agents/skills/python-guideline/: SKILL.md
.agents/skills/yeolo-spec-matcher/: SKILL.md
.agents/templates/: module_explain_template.md  progress_template.md  review_report_template.md
.github/workflows/: deploy.yml
app/: main.py
app/agent/: __init__.py  course_chain.py  prompts.py  taste_profile_chains.py
app/agent/tools/: __init__.py
app/api/: course.py  taste_profile.py
app/core/: config.py
app/schemas/: behavior.py  course.py  taste_profile.py
app/services/: behavior_service.py  course_service.py
tests/: test_behavior_analysis.py  test_course_generation.py
tests/e2e/: generate_course.py  generate_taste.py
